# ThirdBrAIn-Tools

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agentskills/: README.md  pyproject.toml
agentskills/deep-research/: SKILL.md
agentskills/deep-research/scripts/: research.py
agentskills/deep-research/src/deep_research/: __init__.py  research.py
agentskills/deep-research/src/deep_research/providers/: deepseek.py  openai.py
agentskills/deep-research/src/deep_research/shared/: base.py  utils.py
agentskills/gamma/: SKILL.md
agentskills/gamma/references/: GAMMA_API_REFERENCE.md
agentskills/google-keep/: SKILL.md
agentskills/nanobanana/: SKILL.md
agentskills/notion/: SKILL.md
scripts/: README.md  __init__.py  extract_json.py  generate_gamma_presentation.py  get_gamma_assets.py  google_keep.py  nanobanana.py  notion.py  poll_research.py  research.py
