[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentskills"
version = "1.0.0"
description = "Collection of Claude Code skills"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
research = "scripts.research:main"
generate_gamma_presentation = "scripts.generate_gamma_presentation:main"
get_gamma_assets = "scripts.get_gamma_assets:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
